Fixed font-sizes for Politics, UserAgreement, PublicOffer pages Fixed Footer gap

--- a/src/components/FooterNewVersion.module.css
+++ b/src/components/FooterNewVersion.module.css
@@ -103,6 +103,7 @@
     color: rgba(26, 26, 26, 1);
     padding: 12.5px 0 12.5px 0;
     margin-bottom: 19px;
+    gap: 20px;
 }
 
 .navLinks span {
@@ -172,10 +173,10 @@
     display: none;
 }
 
-@media screen and (max-width: 1773px) {
+@media screen and (max-width: 1853px) {
     .navLinks{
       margin-bottom: -3px;
-      gap: 10px;
+      gap: 20px;
     }
 }
 @media screen and (max-width: 1470px) {
